# TabbyKV

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs  config.json
.github/workflows/: rust.yml
proto/: tabbykv.proto
src/: client.rs  common.rs  lib.rs  parse.rs  server.rs
src/engines/: mod.rs
src/engines/lsm/: block.rs  compact.rs  key.rs  lsm_storage.rs  manifest.rs  mem_table.rs  mod.rs  mvcc.rs  storage.rs  table.rs  utils.rs  wal.rs
src/engines/lsm/block/: builder.rs  iterator.rs
src/engines/lsm/compact/: leveled.rs  simple_leveled.rs  tiered.rs
src/engines/lsm/iterators/: concat_iterator.rs  fused_iterator.rs  lsm_iterator.rs  merge_iterator.rs  mod.rs  two_merge_iterator.rs
src/engines/lsm/mvcc/: txn.rs  watermark.rs
src/engines/lsm/storage/: option.rs  state.rs
src/engines/lsm/table/: bloom_filter.rs  builder.rs  iterator.rs
src/entity/: command.rs  commons.rs  errors.rs  mod.rs  request.rs  response.rs
src/servers/: cli_server.rs  grpc_server.rs  mod.rs
tests/: test.rs
