[package]
name = "tabby_kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
console = "0.15.7"
dialoguer = "0.11.0"
indicatif = "0.17.7"
thiserror = "1.0.56"
anyhow = "1.0.79"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.20"