[package]
name = "tabby_kv"
version = "0.1.0"
edition = "2021"
authors = ["Yongxin-Hu <cn849229520@gmail.com>"]

[[bin]]
name="server"
path="src/bin/server.rs"

[[bin]]
name="client"
path="src/bin/cli.rs"

[dependencies]
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
console = "0.15.7"
dialoguer = "0.11.0"
indicatif = "0.17.7"
thiserror = "1.0.56"
anyhow = "1.0.79"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.20"

# engine/lsm
bytes = { version = "1.2.1", features = ["serde"] }
parking_lot = "0.12"
moka = "0.9"
crossbeam-skiplist = "0.1"
crossbeam-channel = "0.5.11"
ouroboros = "0.18"
bitvec = "1.0.1"
crc32fast = "1.3.2"
farmhash = "1"

[dev-dependencies]
tempfile = "3"
